--- a/app/src/main/res/layout/listitem_note.xml
+++ b/app/src/main/res/layout/listitem_note.xml
@@ -5,17 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    app:circularflow_radiusInDP="10dp">
-
-    <CheckBox
-        android:id="@+id/isDone"
-        android:layout_width="32dp"
-        android:layout_height="match_parent"
-        android:text="CheckBox" />
+    android:paddingStart="5dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
@@ -23,14 +18,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NaN"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/itemDateTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="NaN"
-            android:textSize="10sp" />
+            android:textSize="14sp" />
+
     </LinearLayout>
 
 </LinearLayout>
