--- a/app/src/main/res/menu/menu_context.xml
+++ b/app/src/main/res/menu/menu_context.xml
@@ -3,6 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/toggleDone"
+        android:title="Abgeschlossen" />
+    <item
         android:id="@+id/edit"
         android:title="Bearbeiten" />
     <item
