--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/syncNote"
+        android:icon="@drawable/cloudsync"
+        android:title="syncNote"
+        app:showAsAction="always|withText" />
     <item
         android:id="@+id/saveNote"
+        android:icon="@drawable/save"
         android:title="Speichern"
         app:showAsAction="always|withText" />
     <item
         android:id="@+id/newNote"
+        android:icon="@drawable/add"
         android:title="Neue Notiz"
         app:showAsAction="always|withText" />
     <item
         android:id="@+id/settings"
+        android:icon="@drawable/settings"
         android:title="Settings"
         app:showAsAction="always|withText" />
 </menu>
