--- a/app/src/main/res/layout/dialog_register.xml
+++ b/app/src/main/res/layout/dialog_register.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Name"
-        android:inputType="textLongMessage|textMultiLine|textPersonName"
+        android:inputType="textPersonName"
         android:minHeight="48dp" />
 
     <EditText
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Username"
-        android:inputType="textLongMessage|textMultiLine|textPersonName"
+        android:inputType="textPersonName"
         android:minHeight="48dp" />
 
     <EditText
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="Password"
-        android:inputType="textLongMessage|textMultiLine|textPersonName"
+        android:inputType="textPassword"
         android:minHeight="48dp" />
 
 </LinearLayout>
