--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,8 +5,8 @@
         android:id="@+id/syncNote"
         android:icon="@drawable/cloudsync"
         android:title="syncNote"
-        android:visible="false"
-        app:showAsAction="always|withText" /><!-- TODO: set visible true - implement syncing -->
+        android:visible="true"
+        app:showAsAction="always|withText" /><!-- TODO: /set visible true/ - implement syncing -->
     <item
         android:id="@+id/saveNote"
         android:icon="@drawable/save"
